# nanoGPT-demo

./: LICENSE  README.md  main.py  pyproject.toml
src/: main.py
src/model/: bigram.py  blm.py
src/modules/: bigram.py  block.py  feed_forward.py
src/modules/self_attention/: attention_base.py  multi_head.py  single_head.py
src/train/: batch_norm.py  transformer.py
src/utils/: attension.py  data_parser.py  input_converter.py  input_data.py  input_loader.py  input_parser.py
test/: test_batch_norm.py  test_bigram.py  test_input_utils.py
