[project]
name = "nanogpt"
version = "0.1.0"
description = "nanoGPT, a local trainable and finetunable agent."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ['torch']

[project.optional-dependencies]
test = [
    "pytest",
]

[project.scripts]
nanogpt = "src.main:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
